Added in styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Github Pages Test</title>
+	<style>
+	body {background: #eee;}
+	.wrap {width: 70%; margin: 0 auto; background: #fff; padding: 50px 20px; border: 2px solid #ddd; border-top: 0; border-bottom: 0;}
+
+	</style>
 </head>
 <body>
+	<div class="wrap">		
 	Here is some copy.
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
@@ -15,6 +21,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>		
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, placeat, ex, doloremque assumenda accusantium ea voluptatem quod saepe magnam ipsum alias repellendus? Obcaecati provident autem doloremque a molestiae ea commodi!</p>
+	</div>	
 </body>
 </html>
