--- a/testone/index.html
+++ b/testone/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Github Pages Test</title>
 	<style>
-	body {background: #eee; height: 100%;}
-	.wrap {width: 70%; margin: 0 auto; background: #fff; padding: 50px 20px; border: 2px solid #ddd; border-top: 0; border-bottom: 0; height: 100%; position: relative;}
+	body {background: #444; height: 100%;}
+	.wrap {width: 70%; margin: 0 auto; background: #222; padding: 50px 20px; border: 2px solid #ddd; border-top: 0; border-bottom: 0; height: 100%; position: relative; color: #fff}
 
 	</style>
 </head>
